--- a/src/main/webapp/WEB-INF/pages/testg.html
+++ b/src/main/webapp/WEB-INF/pages/testg.html
@@ -142,7 +142,19 @@ To change this template use File | Settings | File Templates.
     </li>
     </ul>
 </div>
-
+<table frame="box" rules="all">
+    <tr align="center">
+        <td rowspan="2">学校名称</td>
+        <td rowspan="2">所在地</td>
+        <td rowspan="2">办学类型</td>
+        <td colspan="2">报名热度</td>
+        <td rowspan="2">高校对比</td>
+    </tr>
+    <tr align="center">
+        <td>全国热度排名</td>
+        <td>类别热度排名</td>
+    </tr>
+</table>
 </body>
 <!--<script>-->
     <!--function id_send() {-->
