--- a/src/main/webapp/WEB-INF/html/test.html
+++ b/src/main/webapp/WEB-INF/html/test.html
@@ -1,135 +1,32 @@
 
 <!DOCTYPE html>
-<html lang="zh">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>水平jQuery选项卡Tabs插件</title>
+<html lang="zh-CN">
 
-    <link rel="stylesheet" href="../../css/style.css">
-    <link rel="stylesheet" href="../../css/jquery.horizontalmenu.css">
+<head>
+    <meta charset="utf-8">
+    <title>左右过度切换的登录注册页面演示</title>
+    <link rel="stylesheet" href="../../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../css/loginCss.css">
+    <script type="text/javascript" src="../../js/jquery.min.js"></script>
+
 </head>
 <body>
-<div class="content">
-    <h1>Adaptive Horizontal Tab Menu</h1>
-    <div class="ah-tab-wrapper">
-        <div class="ah-tab">
-            <a class="ah-tab-item" data-ah-tab-active="true" href="">2020-01</a>
-            <a class="ah-tab-item" href="">2020-02</a>
-            <a class="ah-tab-item" href="">2020-03</a>
-            <a class="ah-tab-item" href="">2020-04</a>
-            <a class="ah-tab-item" href="">2020-05</a>
-            <a class="ah-tab-item" href="">2020-06</a>
-            <a class="ah-tab-item" href="">2020-07</a>
-            <a class="ah-tab-item" href="">2020-08</a>
-            <a class="ah-tab-item" href="">2020-09</a>
-            <a class="ah-tab-item" href="">2020-10</a>
-            <a class="ah-tab-item" href="">2020-11</a>
-            <a class="ah-tab-item" href="">2020-12</a>
-        </div>
-    </div>
-    <div class="ah-tab-content-wrapper">
-        <div class="ah-tab-content" data-ah-tab-active="true">
-            <h3 class="align-content-center">1月重点关注：</h3>
-            <p>
-                一般情况下，各地高考生本月可陆续领到《高考考试说明》
-                <br>这本书很重要，不但是高考命题的重要依据，也是考生复习与备考的重要参考。
-                <br>此外，有关高校将陆续公布保送生、艺术类专业等特殊类型招生简章，香港、澳门高校内地招生也将在本月陆续进行，对于有意港澳高校的考生家长需要及时关注。
-            </p>
-        </div>
-        <div class="ah-tab-content">
-            <h3>2月重点关注：艺术类专业校考,特殊类型招生简章</h3>
-            <p>
-                本月，艺术类专业考试是艺考生关注的热点。艺术类专业考试分为省级招办统一组织的专业考试(简称省级统考)和招生学校组织的专业考试(简称校考)两种形式。考生所报考专业涉及省级统考的，考生须参加省级统考。学校组织校考的，考生还要按招生院校的规定时间报名、考试。
-                <br>
-                <br>另外，高校2019年保送生、高水平艺术团等招生简章仍将在陆续公布，考生家长需要及时关注。
-            </p>
-        </div>
-        <div class="ah-tab-content">
-            <h3>3月重点关注：自主招生简章,高考体检,各省招生规定,高职单招</h3>
-            <p>
-                本月，自主招生试点高校将陆续发布2019年自主招生简章，考生可关注本网站相关信息。考生要根据高校简章要求，按时完成报名，并提交相关申请材料。90所自主招生高校全部通过阳光高考特殊类型招生报名平台接受考生报名。请考生认真阅读《报名系统使用说明》和《报名系统常见问题》。
-            </p>
-        </div>
-        <div class="ah-tab-content">
-            <h3>4月重点关注：高考,大事记,4月</h3>
-            <p>
-                本月，高校2019年招生章程将陆续发布，招生章程是考生了解高校招生信息、招生办法最重要的途径之一。请考生和家长仔细阅读有意报考高校的招生章程。如有不明白的地方，可咨询高校招办。
-            </p>
-        </div>
-        <div class="ah-tab-content">
-            <h3>5月重点关注：招生咨询会,熟悉志愿填报政策,名单公示</h3>
-            <p>
-                本月，部分高校会集中举行招生咨询会、校园开放日，考生家长可通过此活动了解心仪高校的招生信息，与招办老师面对面咨询沟通。
-            </p>
-        </div>
-        <div class="ah-tab-content">
-            <h3>6月重点关注：高考,高考查分,填报志愿</h3>
-            <p>
-                6月7日，考生将走向高考考场，检验十多年的学习成果。在此也预祝2019高考学子金榜题名，考入自己理想的大学。
-            </p>
+<div class="headerPage"></div>
+<div class="newPage"></div>
+<div class="FootPage"></div>
 
-        </div>
-        <div class="ah-tab-content">
-            <h3>7月重点关注：高考志愿填报,高考录取,征集志愿</h3>
-            <p>
-                进入7月，各省市高招录取陆续开始，考生按时填好志愿后，仍需及时了解录取信息。在高考录取进程中，因为上线生源不足等原因，某些批次某些高校会出现招生计划未完成的情况。针对这些情况，部分省份将会发布征集志愿。对于未录取的考生一定要重视征集志愿，根据自身情况进行选择，及时填报，不要错过这趟高考录取的“末班车”。
-            </p>
-        </div>
-        <div class="ah-tab-content">
-            <<h3>8月重点关注：专科录取,录取通知书,助学贷款</h3>
-            <p>
-                一般情况下，本科批次录取基本在7月结束，专科批次将在8月录取，考生家长仍需持续关注该批次录取，了解专科院校招生信息和特色专业等。
-            </p>
-        </div>
-        <div class="ah-tab-content">
-            <h3>9月重点关注：空军/海军/民航招飞</h3>
-            <p>
-                空军、海军招飞工作一般于9月底10月初启动。致力于当飞行员的考生可在所在中学关注报名通知，也可在空军招飞网、海军招飞网了解相关政策。需要知道的是，招飞选拨是一个长线过程。考生要参加严格的体格检查、心理检测、 政治审查等，还要参加高考。
-            </p>
-        </div>
-        <div class="ah-tab-content">
-            <h3>10月重点关注：《高考考试说明》,特殊类型招生简章,港澳高校内地招生</h3>
-            <p>
-                空军、民航招飞初选检测从本月陆续进行，具体要根据各地的初选日程安排来看，也会有部分省份将在国庆节后对报名考生进行检测。
-                <br><br>
-                另外，根据历年规律，每年进入10月后，部分高校会陆续发布艺术特长生、高水平运动员、保送生等信息，建议考生和家长要注意及时予以关注。
-
-
-            </p>
-        </div>
-        <div class="ah-tab-content">
-            <h3>11月重点关注：高考报名,艺术类统考报名,民航招飞</h3>
-            <p>
-                本月对高考生来说非常重要，很多省份的2019年高考报名时间在这个月对外公布。考生和家长要密切关注当地教育考试院网站上发布的相关信息，然后根据省级招办的统一安排，在指定时间、地点报名。
-                <br><br>
-                艺术类考生本月需要关注本省艺术类专业省统考的范围及报名考试时间，有些省份艺术类专业试报名与高考报名同时进行，也有分开进行报名的。对于拟报考专业在省统考范围内，考生必须参加省统考并获得合格成绩。
-            </p>
-
-        </div>
-        <div class="ah-tab-content">
-            <h3>12月重点关注：高考报名,艺术类统考</h3>
-            <p>到本月，部分省份2019年高考报名工作已完成，还有部分省份的高考报名将在12月进行，考生要根据省级招办的统一安排，在指定时间、地点报名。特别提示考生要注意看清报名要求，认真核对有关信息，避免出错。
-                　　<br><br>
-                部分省份还公布了艺术类专业统考的报名、考试安排。有意报考艺术类专业的考生要注意报名时间。
-            </p>
-        </div>
-    </div>
-</div>
-
-<script src="../../js/jquery-3.4.1.js" type="text/javascript"></script>
-<script src="../../js/jquery.horizontalmenu.js"></script>
+<script src="../../js/script.js"></script>
 <script>
     $(function () {
-        $('.ah-tab-wrapper').horizontalmenu({
-            itemClick: function (item) {
-                $('.ah-tab-content-wrapper .ah-tab-content').removeAttr('data-ah-tab-active');
-                $('.ah-tab-content-wrapper .ah-tab-content:eq(' + $(item).index() + ')').attr('data-ah-tab-active', 'true');
-                return false;
-            }
-        });
+        $(".headerPage").load("headerPage.html");
     });
+    $(function () {
+        $(".FootPage").load("FootPage.html");
+    })
+    $(function () {
+        $(".newPage").load("newtext.html");
+    })
 </script>
 </body>
+
 </html>
